Make new trade same size as others; make cards on mobile thinner, fix card bottom for pending trades

--- a/client/src/styles/cardAdd.css
+++ b/client/src/styles/cardAdd.css
@@ -46,8 +46,8 @@
 
 @media only screen and (max-width : 768px) {
     .cardAdd{
-        height: 20vh;
-        width: 95vw;
+        height: 30vh;
+        width: 90vw;
         background-color: white;
     /*    display: flex;*/
     /*    flex-direction: column;*/
@@ -56,6 +56,7 @@
         margin-bottom: 3%;
         border: 1px solid rgba(0, 0, 0, 0.125);
         border-radius: 0.25rem;
+        box-shadow: -5px 5px 20px -5px rgba(0,0,0,0.5);
     }
 
     .cardAddImage{
@@ -63,7 +64,7 @@
         object-fit: contain;
         max-width: 7vh;
         max-height: 7vh;
-        margin-top: 3vh;
+        margin-top: 8vh;
     }
 
     .cardAddTitle{
