--- a/client/src/styles/cardClosedTrade.css
+++ b/client/src/styles/cardClosedTrade.css
@@ -74,7 +74,7 @@
     .ctCard{
         box-shadow: -5px 5px 20px -5px rgba(0,0,0,0.5);
         height: 30vh;
-        width: 95vw;
+        width: 90vw;
         background-color: white;
     /*    display: flex;*/
     /*    flex-direction: column;*/
