--- a/client/src/styles/form.css
+++ b/client/src/styles/form.css
@@ -44,7 +44,7 @@
         border-radius: 3px;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 1);
     */
-        width: 100vw;
+        width: 92vw;
         height: 80vh;
         position: relative;
         text-align: center;
