--- a/client/src/styles/tradeDetail.css
+++ b/client/src/styles/tradeDetail.css
@@ -120,7 +120,7 @@
 @media only screen and (max-width : 768px) {
     .tdContainer{
         background-color: #47AFCB;
-        width: 100vw;
+        width: 92vw;
         height: 60vh;
         align-items: center;
         justify-content: center;    
